tests/ui/parser/removed-syntax/removed-syntax-with-2.stderr
error: expected one of `,`, `:`, or `}`, found `a`
  --> $DIR/removed-syntax-with-2.rs:8:31
   |
LL |     let b = S { foo: (), with a };
   |             -            ---- ^ expected one of `,`, `:`, or `}`
   |             |            |
   |             |            while parsing this struct field
   |             while parsing this struct

error: aborting due to 1 previous error

